# torch-sim-edith

./: .gitignore  Dockerfile  README.md  Vagrantfile  edith_utils.py  environment.yml  mace-environment.yml  main.py  pyproject.toml  relaxation.py  soft_sphere_fire.py  ssf_job.sh  torch-sim-environment.yml
