[project]
name = "hello-edith"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ase>=3.25.0",
    "garden-ai>=0.0.4",
    "globus-compute-sdk>=3.8.0",
    "ipython>=9.4.0",
    "mace-torch>=0.3.13",
    "modal>=1.0.5",
    "torch-sim-atomistic>=0.2.2",
]
